# fhe-agent-shield

./: .env.example  .gas-snapshot  .gitignore  .gitmodules  .prettierignore  DEMO.md  Makefile  README.md  ROADMAP.md  SPEC.md  bun.lockb  commands.sh  demo.sh  foundry.toml  package.json  remappings.txt  report.md  slither.config.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  gas.yml  security.yml
deployments/: anvil.json
docs/: api-reference.md  architecture.md  competitive-analysis.md  competitor-roadmap.md  elizaos-nanobot-roadmap.md  fhe-testing-strategies.md  fhe-testing.md  mainnet-readiness.md  migration-from-fhenix-l2.md  multi-chain-devx.md  security-model.md  tdd-test-suite.md  threat-model.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
sandbox/: Dockerfile.deployer  Dockerfile.full  Dockerfile.tests  docker-compose-simple.yml  docker-compose.yml  package-lock.json  package.json  run.sh  sandbox.sh  test-openclaw-integration.ts  test-openclaw-plugin.ts  test-openclaw.sh
sandbox/config/: openclaw.yaml
sandbox/scripts/: deploy.sh  integration-test.js  test-integration.sh
script/: DeployAll.s.sol  DeployAndTest.s.sol  ForkIntegration.s.sol
scripts/: verify-sdks.sh
sdk/elixir/: mix.exs
sdk/elizaos-plugin/: package.json
sdk/go/: go.mod  go.sum
sdk/moltbook/: package.json
sdk/moltbook-kotlin/: build.gradle.kts
sdk/moltbook-swift/: Package.swift
sdk/moltworker/: package.json  wrangler.toml
sdk/nanobot-integration/: pyproject.toml
sdk/python/: pyproject.toml
sdk/python/src/: __init__.py
sdk/python/src/fhe_agent_shield/: __init__.py  actions.py  config.py  contracts.py  credentials.py  memory.py  types.py
sdk/python/src/fhe_agent_shield/crewai/: __init__.py
sdk/python/src/fhe_agent_shield/langgraph/: __init__.py
sdk/python/tests/: __init__.py  test_credentials.py  test_crewai.py  test_langgraph.py
sdk/rust/: Cargo.toml
sdk/rust/examples/: basic.rs
sdk/rust/ironclaw/src/: lib.rs  vault.rs  zero.rs
sdk/rust/moltis/src/: fhe_memory.rs  fhe_vault.rs  lib.rs  mcp_tools.rs
sdk/rust/src/: client.rs  types.rs
sdk/rust/src/abi/: agent_vault.json
sdk/semantic-kernel/: FHEAgentShield.SemanticKernel.csproj  FHECredentialProvider.cs  FHECredentialProviderTests.cs
sdk/swift-moltis/: Package.swift
sdk/typescript/: package.json
sdk/zeroclaw-fhe/: Cargo.toml
sdk/zig/: build.zig
skills/browser/: BrowserSkill.sol
skills/email/: EmailSkill.sol
skills/file/: FileSkill.sol
skills/openclaw-integration/: SKILL.md
skills/react-hooks/: SKILL.md
skills/solidity-fhe/: SKILL.md
src/: FHERC20.sol
src/contracts/: ActionSealer.sol  AgentMemory.sol  AgentVault.sol  SkillRegistry.sol
src/hooks/: index.ts  useAgentVault.ts  useEncryptedAgent.ts  useFHEClient.ts  useSealedAction.ts
src/openclaw/: fhe-credential-vault.ts  fhe-memory-provider.ts  fhe-skill-decorator.ts  index.ts
src/utils/: types.ts
test/: FHERC20.t.sol  FheIntegration.t.sol  Integration.t.sol
test/contracts/: ActionSealer.t.sol  AgentMemory.t.sol  AgentVault.t.sol  SkillRegistry.t.sol
test/fork/: FhenixForkTest.t.sol  README.md
testnet/: Makefile  README.md
video/: FHEDemo.tsx  README.md
(+88 files in other folders)
