[package]
name = "fhe-agent-shield"
version = "1.0.0"
edition = "2021"
authors = ["FHE-Agent Shield Team"]
description = "FHE privacy SDK for AI agents"

[dependencies]
ethers = "2.0"
ethers-contract = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[lib]
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[patch.crates-io]
jsonwebtoken = { version = "10.3.0" }
ring = { version = "0.17.14" }
rustls-webpki = { version = "0.103.10" }
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc", tag = "0.103.10" }
