[package]
name = "fhe-agent-shield"
version = "1.0.0"
edition = "2021"
authors = ["FHE-Agent Shield Team"]
description = "FHE privacy SDK for AI agents"

[dependencies]
ethers = "2.0"
ethers-contract = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[lib]
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[patch.crates-io]
# NOTE: ethers-rs is ARCHIVED (https://github.com/gakonst/ethers-rs)
# Known vulnerabilities in transitive dependencies (jsonwebtoken 8.x, ring 0.16.20)
# cannot be fixed upstream. The jsonwebtoken 8.x and ring 0.16.20 vulnerabilities
# are blocked by ethers-rs 2.0.14's dependency on ethers-providers which uses jsonwebtoken 8.x.
# Mitigation: reqwest upgraded to 0.12 fixes rustls-webpki vulnerability.
